# mti865_projet

./: .gitattributes  .gitignore  README.md  UNet_Base.py  Untitled.ipynb  deepclean.sh  executed.ipynb  mainSegmentationChallenge.ipynb  mainSegmentationChallenge_mathieu.ipynb  mainSegmentationChallenge_tim.ipynb  medicalDataLoader.py  medicalDataLoader_mathieu.py  metrics.py  modelEvaluation.ipynb  pyproject.toml  requirements.txt  run_gridearch_cc.sh  run_notebooks.sh  segmentation_challenge_script.py  studentUtils.py  test_import.py  trainModelALL.ipynb  trainModelDSC-CE.ipynb  trainModelDefault.ipynb  trainModelTransformConsistencyBCE.ipynb  trainModelTransformConsistencyL2.ipynb  utils.py
__MACOSX/: ._Data
__MACOSX/Challenge-H2023/: ._Data  ._UNet_Base.py  ._mainSegmentationChallenge.ipynb  ._medicalDataLoader.py  ._progressBar.py  ._utils.py
notebooks/: trainModelALL.ipynb  trainModelDSC-CE.ipynb  trainModelDefault.ipynb  trainModelTransformConsistencyBCE.ipynb  trainModelTransformConsistencyL2.ipynb
output/: trainModelTransformConsistencyBCE.ipynb
runs/UNet/: events.out.tfevents.1732584842.PCDuDieuDesMathsNico.69412.0  events.out.tfevents.1732584911.PCDuDieuDesMathsNico.69412.1
save/ALL/: 52_Epoch-0,7CE+0,3DSC+0,1TC  52_Epoch0,8CE+0,2DSC+0,1TC  86_Epoch0,8CE+0,2DSC+0,1TC  87_EpochMasterStudentWithTC0.1  97_Epoch-0,7CE+0,3DSC+0,1TC
save/DSC-CE/: 109_Epoch-0.3DSC+0.7CE  61_Epoch-0.3DSC+0.7CE
save/DefaultUNET/: 115_Epoch-DefaultUNET-wd1e-4  125_Epoch-DefaultUNET-wd1e-5  58_Epoch-DefaultUNET-wd1e-4  88_Epoch-DefaultUNET-wd1e-5
(+1986 files in other folders)
